<resources>
    <string name="app_name">LIBRI-DS3M</string>
    <string name="cadastroUsuarioTitulo">CADASTRO DE USUÁRIO</string>
    <string name="txtNome">NOME</string>
    <string name="txtSobrenome">SOBRENOME</string>
    <string name="txtEmail">EMAIL</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtSenha">SENHA</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="tituloCadastroUsuario">CADASTRO DE USUÁRIO</string>
    <string name="mensagem_cadastro_usuario">VOCÊ ESTÁ CADASTRANDO UM USUÁRIO!</string>
    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="cadastroLivroTitulo">CADASTRO DE LIVROS</string>
    <string name="txtTitulo">TÍTULO</string>
    <string name="txtLivroDescricao">DESCRIÇÃO</string>
    <string name="txtLivroFoto">FOTO</string>
    <string name="titulo_cadastro_livro">CADASTRO DE LIVROS</string>
    <string name="mensagem_cadastro_livro">VOCÊ ESTÁ CADASTRANDO UM LIVRO NO APP LIBRI</string>
    <string name="logar">ENTRAR</string>
</resources>